[gd_scene load_steps=2 format=3 uid="uid://pe1exaej6xfl"]

[ext_resource type="Script" path="res://Scenes/Game.gd" id="1_pcym8"]

[node name="Scenes" type="Node"]
script = ExtResource("1_pcym8")

[node name="MainMenuCanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenuTitle" type="Label" parent="MainMenuCanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="PlayButton" type="Button" parent="MainMenuCanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -104.0
offset_right = -38.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayText" type="Label" parent="MainMenuCanvasLayer/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HowToPlayButton" type="Button" parent="MainMenuCanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -4.0
offset_right = -38.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="HowToPlayText" type="Label" parent="MainMenuCanvasLayer/HowToPlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditsButton" type="Button" parent="MainMenuCanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = 96.0
offset_right = -38.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditsText" type="Label" parent="MainMenuCanvasLayer/CreditsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsButton" type="Button" parent="MainMenuCanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = 196.0
offset_right = -38.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsText" type="Label" parent="MainMenuCanvasLayer/OptionsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayingGameCanvasLayer" type="CanvasLayer" parent="."]

[node name="HowToPlayCanvasLayer" type="CanvasLayer" parent="."]

[node name="HowToPlayTitle" type="Label" parent="HowToPlayCanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="HowToPlayBackButton" type="Button" parent="HowToPlayCanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -46.0
offset_top = -98.0
offset_right = -38.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0

[node name="HowToPlayBackText" type="Label" parent="HowToPlayCanvasLayer/HowToPlayBackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditsCanvasLayer" type="CanvasLayer" parent="."]

[node name="CreditsTitle" type="Label" parent="CreditsCanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="CreditsBackButton" type="Button" parent="CreditsCanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -46.0
offset_top = -98.0
offset_right = -38.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0

[node name="CreditsBackText" type="Label" parent="CreditsCanvasLayer/CreditsBackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsCanvasLayer" type="CanvasLayer" parent="."]

[node name="OptionsTitle" type="Label" parent="OptionsCanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="OptionsBackButton" type="Button" parent="OptionsCanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -46.0
offset_top = -98.0
offset_right = -38.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0

[node name="OptionsBackText" type="Label" parent="OptionsCanvasLayer/OptionsBackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MusicVolumeText" type="Label" parent="OptionsCanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = -114.0
offset_right = -146.0
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 2

[node name="MusicVolumeSlider" type="HSlider" parent="OptionsCanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -124.0
offset_right = -38.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
value = 1.0

[node name="MusicVolumePercentage" type="Label" parent="OptionsCanvasLayer/MusicVolumeSlider"]
layout_mode = 0
offset_left = 110.0
offset_top = 13.0
offset_right = 150.0
offset_bottom = 36.0

[node name="SFXVolumeText" type="Label" parent="OptionsCanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -14.0
offset_right = -136.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2

[node name="SFXVolumeSlider" type="HSlider" parent="OptionsCanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -24.0
offset_right = -38.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
value = 1.0

[node name="SFXVolumePercentage" type="Label" parent="OptionsCanvasLayer/SFXVolumeSlider"]
layout_mode = 0
offset_left = 110.0
offset_top = 13.0
offset_right = 150.0
offset_bottom = 36.0

[connection signal="pressed" from="MainMenuCanvasLayer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenuCanvasLayer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="MainMenuCanvasLayer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MainMenuCanvasLayer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="HowToPlayCanvasLayer/HowToPlayBackButton" to="." method="_on_how_to_play_back_button_pressed"]
[connection signal="pressed" from="CreditsCanvasLayer/CreditsBackButton" to="." method="_on_credits_back_button_pressed"]
[connection signal="pressed" from="OptionsCanvasLayer/OptionsBackButton" to="." method="_on_options_back_button_pressed"]
